--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .row-header {
-    maargin: 0px auto;
+    margin: 0px auto;
     padding: 0px auto;
 }
 
@@ -27,4 +27,13 @@
     font-size: 80%;
     margin: 0px;
     color: #0f0f0f;
+}
+
+body {
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
+
+.navbar-dark {
+    background-color: #512DA8;
 }
