--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,3 +74,17 @@ body{
     bottom: 0px;
     z-index: 1;
 }
+
+
+.modal-header {
+    background-color: $background-dark;
+    color: white;
+
+    .close {
+        color: floralwhite;
+    }
+}
+
+.modal-body {
+    background-color: $background-pale;
+}
